--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template-Webpack</title>
+    <title>Template</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="sidebar">Sidebar</div>
+        <header>Header</header>
+        <div class="content">Content</div>
+        <footer>Footer</footer>
+    </div>
 </body>
 </html>
